Changed idex link to site

--- a/index.htm
+++ b/index.htm
@@ -8,7 +8,7 @@
 <p>Page for converting LaTex </p>
  <a href="https://web.stcloudstate.edu/jmshir/TEX.html">LaTeX</a> 
  <p>Page for converting AsciiMath  </p>
- <a href="https://web.stcloudstate.edu/jmshir/PAGE.htm">AsciiMath</a> 
+ <a href="PAGE.htm">AsciiMath</a> 
  
  <br /> <br /> <br /> 
 <!-- HERE IS TEXT INPUT!!!-->
