I fixed the math jax to point to the cloudflare server

--- a/PAGE.htm
+++ b/PAGE.htm
@@ -25,9 +25,9 @@
 	
 	
 	
-	
+	<!--async  src="https://web.stcloudstate.edu/jmshir/Mathjax-2.6-latest/MathJax.js?config=AM_CHTML-full.js">!-->
 	<script 
-	async  src="https://web.stcloudstate.edu/jmshir/Mathjax-2.6-latest/MathJax.js?config=AM_CHTML-full.js">
+	async  src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML">
     </script>
   <!-- A link has to be made to "AM_CHTML-full.js" for MathJax to work.  -->
   <!-- The "?config=" is telling mathjax to look in the "config" file for "AM_CHTML-full.js" which is stored inside "MathJax-2.6-letest" -->
