--- a/TEX.html
+++ b/TEX.html
@@ -6,8 +6,8 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
-
-<script type="text/javascript" src="https://web.stcloudstate.edu/jmshir/Mathjax-2.6-latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+<!--<script type="text/javascript" src="https://web.stcloudstate.edu/jmshir/Mathjax-2.6-latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>!-->
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML"></script>
 
 <style>
 input {margin-top: .7em}
